--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.8",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
     "bootstrap": "^5.3.1",
+    "formik": "^2.4.4",
     "jquery": "^3.7.1",
     "next": "13.4.19",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3",
-    "wow.js": "^1.2.2"
+    "wow.js": "^1.2.2",
+    "yup": "^1.2.0"
   }
 }
