--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.15",
     "bootstrap": "^5.3.1",
     "formik": "^2.4.4",
+    "heroicons": "^2.0.18",
     "jquery": "^3.7.1",
     "next": "13.4.19",
     "popper": "^1.0.1",
